# ani-cli-gui

./: README.md  index.html  package.json
.github/workflows/: main.yml
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/api/: searching.ts  url-processing.ts
src/components/: AnimeCard.tsx  Loading.tsx  SelectionModal.tsx
src/utils/: constants.ts  quality.ts  request-to-doc.ts  video-playback.ts
