[package]
name = "ani-cli-gui"
version = "0.3.0"
description = "A desktop app to browse and play anime."
authors = ["you"]
license = "GPL-3.0"
repository = ""
default-run = "ani-cli-gui"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["http-all", "shell-execute"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

# https://tauri.studio/v1/guides/building/app-size/#rust-build-time-optimizations
[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "z" # Optimize for binary size
# https://tauri.studio/v1/guides/building/app-size/#stripping
strip = true  # Automatically strip symbols from the binary.
